--- a/Weekly_sales_amazon_project.ipynb
+++ b/Weekly_sales_amazon_project.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Weekly_sales_amazon_project.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM8q2ukHMO7oun/5qdvqFrK",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,137 +19,29 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 90,
+      "cell_type": "markdown",
       "metadata": {
-        "id": "h5cyKgdhAqN0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "5c8c7120-dc4e-483b-90fb-bfdf621a55b2"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting voila\n",
-            "  Downloading voila-0.3.0-py3-none-any.whl (1.7 MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.7 MB 5.0 MB/s \n",
-            "\u001b[?25hCollecting websockets>=9.0\n",
-            "  Downloading websockets-10.1-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (111 kB)\n",
-            "\u001b[K     |████████████████████████████████| 111 kB 58.7 MB/s \n",
-            "\u001b[?25hCollecting nbconvert<7,>=6.0.0\n",
-            "  Downloading nbconvert-6.4.0-py3-none-any.whl (557 kB)\n",
-            "\u001b[K     |████████████████████████████████| 557 kB 52.2 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: nbclient<0.6,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from voila) (0.5.9)\n",
-            "Collecting jupyter-client<8,>=6.1.3\n",
-            "  Downloading jupyter_client-7.1.0-py3-none-any.whl (129 kB)\n",
-            "\u001b[K     |████████████████████████████████| 129 kB 54.1 MB/s \n",
-            "\u001b[?25hCollecting jupyter-server<2.0.0,>=0.3.0\n",
-            "  Downloading jupyter_server-1.13.2-py3-none-any.whl (395 kB)\n",
-            "\u001b[K     |████████████████████████████████| 395 kB 70.2 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: jupyter-core>=4.6.0 in /usr/local/lib/python3.7/dist-packages (from jupyter-client<8,>=6.1.3->voila) (4.9.1)\n",
-            "Requirement already satisfied: tornado>=4.1 in /usr/local/lib/python3.7/dist-packages (from jupyter-client<8,>=6.1.3->voila) (5.1.1)\n",
-            "Requirement already satisfied: entrypoints in /usr/local/lib/python3.7/dist-packages (from jupyter-client<8,>=6.1.3->voila) (0.3)\n",
-            "Requirement already satisfied: nest-asyncio>=1.5 in /usr/local/lib/python3.7/dist-packages (from jupyter-client<8,>=6.1.3->voila) (1.5.4)\n",
-            "Requirement already satisfied: traitlets in /usr/local/lib/python3.7/dist-packages (from jupyter-client<8,>=6.1.3->voila) (5.1.1)\n",
-            "Requirement already satisfied: pyzmq>=13 in /usr/local/lib/python3.7/dist-packages (from jupyter-client<8,>=6.1.3->voila) (22.3.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from jupyter-client<8,>=6.1.3->voila) (2.8.2)\n",
-            "Requirement already satisfied: terminado>=0.8.3 in /usr/local/lib/python3.7/dist-packages (from jupyter-server<2.0.0,>=0.3.0->voila) (0.12.1)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.7/dist-packages (from jupyter-server<2.0.0,>=0.3.0->voila) (21.3)\n",
-            "Collecting anyio<4,>=3.1.0\n",
-            "  Downloading anyio-3.5.0-py3-none-any.whl (79 kB)\n",
-            "\u001b[K     |████████████████████████████████| 79 kB 7.3 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: Send2Trash in /usr/local/lib/python3.7/dist-packages (from jupyter-server<2.0.0,>=0.3.0->voila) (1.8.0)\n",
-            "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.7/dist-packages (from jupyter-server<2.0.0,>=0.3.0->voila) (0.2.0)\n",
-            "Requirement already satisfied: argon2-cffi in /usr/local/lib/python3.7/dist-packages (from jupyter-server<2.0.0,>=0.3.0->voila) (21.3.0)\n",
-            "Collecting tornado>=4.1\n",
-            "  Downloading tornado-6.1-cp37-cp37m-manylinux2010_x86_64.whl (428 kB)\n",
-            "\u001b[K     |████████████████████████████████| 428 kB 58.6 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: prometheus-client in /usr/local/lib/python3.7/dist-packages (from jupyter-server<2.0.0,>=0.3.0->voila) (0.12.0)\n",
-            "Collecting websocket-client\n",
-            "  Downloading websocket_client-1.2.3-py3-none-any.whl (53 kB)\n",
-            "\u001b[K     |████████████████████████████████| 53 kB 1.8 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: nbformat in /usr/local/lib/python3.7/dist-packages (from jupyter-server<2.0.0,>=0.3.0->voila) (5.1.3)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.7/dist-packages (from jupyter-server<2.0.0,>=0.3.0->voila) (2.11.3)\n",
-            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.7/dist-packages (from anyio<4,>=3.1.0->jupyter-server<2.0.0,>=0.3.0->voila) (2.10)\n",
-            "Collecting sniffio>=1.1\n",
-            "  Downloading sniffio-1.2.0-py3-none-any.whl (10 kB)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from anyio<4,>=3.1.0->jupyter-server<2.0.0,>=0.3.0->voila) (3.10.0.2)\n",
-            "Requirement already satisfied: pygments>=2.4.1 in /usr/local/lib/python3.7/dist-packages (from nbconvert<7,>=6.0.0->voila) (2.6.1)\n",
-            "Requirement already satisfied: bleach in /usr/local/lib/python3.7/dist-packages (from nbconvert<7,>=6.0.0->voila) (4.1.0)\n",
-            "Requirement already satisfied: pandocfilters>=1.4.1 in /usr/local/lib/python3.7/dist-packages (from nbconvert<7,>=6.0.0->voila) (1.5.0)\n",
-            "Requirement already satisfied: jupyterlab-pygments in /usr/local/lib/python3.7/dist-packages (from nbconvert<7,>=6.0.0->voila) (0.1.2)\n",
-            "Requirement already satisfied: testpath in /usr/local/lib/python3.7/dist-packages (from nbconvert<7,>=6.0.0->voila) (0.5.0)\n",
-            "Requirement already satisfied: defusedxml in /usr/local/lib/python3.7/dist-packages (from nbconvert<7,>=6.0.0->voila) (0.7.1)\n",
-            "Requirement already satisfied: mistune<2,>=0.8.1 in /usr/local/lib/python3.7/dist-packages (from nbconvert<7,>=6.0.0->voila) (0.8.4)\n",
-            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.7/dist-packages (from jinja2->jupyter-server<2.0.0,>=0.3.0->voila) (2.0.1)\n",
-            "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /usr/local/lib/python3.7/dist-packages (from nbformat->jupyter-server<2.0.0,>=0.3.0->voila) (4.3.3)\n",
-            "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /usr/local/lib/python3.7/dist-packages (from jsonschema!=2.5.0,>=2.4->nbformat->jupyter-server<2.0.0,>=0.3.0->voila) (0.18.0)\n",
-            "Requirement already satisfied: importlib-resources>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from jsonschema!=2.5.0,>=2.4->nbformat->jupyter-server<2.0.0,>=0.3.0->voila) (5.4.0)\n",
-            "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.7/dist-packages (from jsonschema!=2.5.0,>=2.4->nbformat->jupyter-server<2.0.0,>=0.3.0->voila) (21.4.0)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from jsonschema!=2.5.0,>=2.4->nbformat->jupyter-server<2.0.0,>=0.3.0->voila) (4.10.0)\n",
-            "Requirement already satisfied: zipp>=3.1.0 in /usr/local/lib/python3.7/dist-packages (from importlib-resources>=1.4.0->jsonschema!=2.5.0,>=2.4->nbformat->jupyter-server<2.0.0,>=0.3.0->voila) (3.7.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->jupyter-client<8,>=6.1.3->voila) (1.15.0)\n",
-            "Requirement already satisfied: ptyprocess in /usr/local/lib/python3.7/dist-packages (from terminado>=0.8.3->jupyter-server<2.0.0,>=0.3.0->voila) (0.7.0)\n",
-            "Requirement already satisfied: argon2-cffi-bindings in /usr/local/lib/python3.7/dist-packages (from argon2-cffi->jupyter-server<2.0.0,>=0.3.0->voila) (21.2.0)\n",
-            "Requirement already satisfied: cffi>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from argon2-cffi-bindings->argon2-cffi->jupyter-server<2.0.0,>=0.3.0->voila) (1.15.0)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.7/dist-packages (from cffi>=1.0.1->argon2-cffi-bindings->argon2-cffi->jupyter-server<2.0.0,>=0.3.0->voila) (2.21)\n",
-            "Requirement already satisfied: webencodings in /usr/local/lib/python3.7/dist-packages (from bleach->nbconvert<7,>=6.0.0->voila) (0.5.1)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging->jupyter-server<2.0.0,>=0.3.0->voila) (3.0.6)\n",
-            "Installing collected packages: tornado, jupyter-client, sniffio, websocket-client, nbconvert, anyio, websockets, jupyter-server, voila\n",
-            "  Attempting uninstall: tornado\n",
-            "    Found existing installation: tornado 5.1.1\n",
-            "    Uninstalling tornado-5.1.1:\n",
-            "      Successfully uninstalled tornado-5.1.1\n",
-            "  Attempting uninstall: jupyter-client\n",
-            "    Found existing installation: jupyter-client 5.3.5\n",
-            "    Uninstalling jupyter-client-5.3.5:\n",
-            "      Successfully uninstalled jupyter-client-5.3.5\n",
-            "  Attempting uninstall: nbconvert\n",
-            "    Found existing installation: nbconvert 5.6.1\n",
-            "    Uninstalling nbconvert-5.6.1:\n",
-            "      Successfully uninstalled nbconvert-5.6.1\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "google-colab 1.0.0 requires tornado~=5.1.0; python_version >= \"3.0\", but you have tornado 6.1 which is incompatible.\u001b[0m\n",
-            "Successfully installed anyio-3.5.0 jupyter-client-7.1.0 jupyter-server-1.13.2 nbconvert-6.4.0 sniffio-1.2.0 tornado-6.1 voila-0.3.0 websocket-client-1.2.3 websockets-10.1\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "jupyter_client",
-                  "tornado"
-                ]
-              }
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enabling: voila\n",
-            "- Writing config: /usr/etc/jupyter\n",
-            "    - Validating...\n",
-            "Error loading server extension voila\n",
-            "     \u001b[31m X\u001b[0m is voila importable?\n"
-          ]
-        }
-      ],
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/akshaypt7/amazon_weekly_sales_viz/blob/main/Weekly_sales_amazon_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 91,
+      "metadata": {
+        "id": "h5cyKgdhAqN0"
+      },
+      "outputs": [],
       "source": [
         "from google.colab import files\n",
         "import pandas as pd\n",
         "import io\n",
         "import numpy as np\n",
-        "!pip install voila\n",
-        "!jupyter serverextension enable --sys-prefix voila"
+        "# !pip install voila\n",
+        "# !jupyter serverextension enable --sys-prefix voila"
       ]
     },
     {
