--- a/Weekly_sales_amazon_project.ipynb
+++ b/Weekly_sales_amazon_project.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "h5cyKgdhAqN0"
       },
@@ -88,10 +88,15 @@
         "df = pd.read_csv(io.BytesIO(uploaded_file['BusinessReport.csv']))\n",
         "\n",
         "\n",
-        "df.drop([ 'Sessions',\n",
-        "       'Session Percentage', 'Page views', 'Page Views Percentage',\n",
-        "       'Featured Offer (Buy Box) Percentage', 'Total Order Items',\n",
-        "       'Unit Session Percentage','(Parent) ASIN'],axis=1,inplace= True)"
+        "try:\n",
+        "\n",
+        "  df.drop([ 'Sessions',\n",
+        "        'Session Percentage', 'Page views', 'Page Views Percentage',\n",
+        "        'Featured Offer (Buy Box) Percentage', 'Total Order Items',\n",
+        "        'Unit Session Percentage','(Parent) ASIN'],axis=1,inplace= True)\n",
+        "  \n",
+        "except:\n",
+        "  pass  "
       ]
     },
     {
